# splice

./: .gitignore  AUTHORS  CHANGELOG.md  Cargo.toml  FINAL_REPORT.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/: __init__.py  jiang2023_benchmark.py  run_jiang_benchmark.sh
benchmark/tests/: test_jiang_benchmark.py
splice/: cli.py  install_rust.py
splice/_rust_bam/: __init__.py
splice/analysis/: __init__.py  cross_tool_comparison.py
splice/core/: bootstrap.py  chromosome_pipeline.py  clustering.py  confidence_scorer.py  cooccurrence.py  diagnostics.py  diff.py  diff_het.py  effective_length.py  event_classifier.py  evidence.py  gtf_parser.py  junction_extractor.py  nmd_classifier.py  psi.py  splicegraph.py
splice/io/: bam_utils.py  format_export.py  output_writer.py  pdf_report.py  qc_report.py  serialization.py  xlsx_export.py
splice/tests/: conftest.py  test_bam_utils.py  test_benchmark.py  test_bootstrap.py  test_chromosome_pipeline.py  test_clustering.py  test_confidence_scorer.py  test_cooccurrence.py  test_cross_tool_comparison.py  test_diagnostics.py  test_diff.py  test_diff_het.py  test_dm_glm.py  test_effective_length.py  test_event_classifier.py  test_evidence.py  test_format_export.py  test_genomic.py  test_gtf_parser.py  test_integration.py  test_junction_extractor.py  test_motif.py  test_nmd_classifier.py  test_output_writer.py  test_parallel.py  test_pdf_report.py  test_psi.py  test_qc_report.py  test_rust_bam.py  test_sashimi_plot.py  test_serialization.py  test_splicegraph.py  test_stats.py  test_xlsx_export.py
splice/utils/: dm_glm.py  genomic.py  motif.py  parallel.py  stats.py
splice/visualization/: __init__.py  sashimi_plot.py
src/: lib.rs
