[package]
name = "splice-rust"
version = "0.1.0"
edition = "2021"
description = "Rust-accelerated BAM reader for SPLICE differential splicing tool"
license = "MIT"

[lib]
name = "splice_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rust-htslib = "0.47"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
